hphp/test/quick/ns_use_func.php.expectf
HipHop Fatal error: Call to undefined function B\f() in %s on line 7
